--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,16 @@
         <app-introduction></app-introduction>
         <app-about-us></app-about-us>
     </div>
-     <!-- <div [ngClass]="{'dark-courses' : (theme | async), 'light-courses' : !(theme | async)}">
+     <div [ngClass]="{'dark-courses' : (theme | async), 'light-courses' : !(theme | async)}">
         <div class="container">
             <app-courses></app-courses>
         </div>
-    </div> -->
-    <!-- <div class="container">
+    </div>
+    <div class="container">
         <app-lecturers></app-lecturers>
         <app-reviews></app-reviews>
         <app-form-order></app-form-order>
         <app-to-start></app-to-start>
         <app-footer></app-footer> 
-    </div> -->
+    </div>
 </div>
