adaptive courses was fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
     </div>
     <div class="container">
         <app-lecturers></app-lecturers>
-        <app-reviews></app-reviews>
+        <!-- <app-reviews></app-reviews>
         <app-form-order></app-form-order>
         <app-to-start></app-to-start>
-        <app-footer></app-footer> 
+        <app-footer></app-footer>  -->
     </div>
 </div>
