--- a/src/app/components/courses/courses.component.scss
+++ b/src/app/components/courses/courses.component.scss
@@ -66,3 +66,9 @@
     }
 }
 
+@media screen and (min-width:326px) and (max-width:449px){
+    .courses-wrapper{
+        padding-left: 5px !important;
+        padding-right: 5px !important;
+    }
+}
