--- a/src/app/components/courses/courses-item/courses-item.component.scss
+++ b/src/app/components/courses/courses-item/courses-item.component.scss
@@ -78,15 +78,46 @@
             font-size: 1rem;
         }
     }
+    .card{
+        height: 24rem;
+    }
+}
+@media screen and (min-width:0px) and (max-width:991px) {
+
+    .card{
+        height: 27rem;
+    }
+}
+
+@media screen and (min-width:1200px) and (max-width:1399px) {
+    .card{
+        height: 30rem;
+    }
 }
 
 @media screen and (min-width:450px) and (max-width:767px) {
     .card {
-        height: 30rem;
+        height: 35rem;
+        display: flex;
+        align-items: center;
+    }
+    .card-inner{
+        width: 80%;
     }
 
     .card-img {
         max-width: 20rem;
+        padding-top: 60px;
+    }
+    .card-back{
+        p{
+            font-size: 20px;
+        }
+    }
+    .name-wrapper{
+        p{
+            font-size: 35px;
+        }
     }
 }
 
