--- a/src/app/components/lecturers/lecturers.component.html
+++ b/src/app/components/lecturers/lecturers.component.html
@@ -9,7 +9,7 @@
             <ng-template *ngFor="let lect of lecturers" ngbSlide >
                 <div class="d-flex justify-content-center slide-box" >
                     <div class="row w-75 lect-wrapper">
-                        <div class="col-4 ps-0 med-w-100">
+                        <div class="col-4 px-0 med-w-100">
                             <div class="lectur-image-wrapper med-w-100">
                                 <img [src]="lect.image">
                             </div>
