--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="d-flex flex-row flex-wrap justify-content-center">
-        <div [ngClass]="{'review-dark' : (theme | async), 'review-light' : !(theme | async)}" class="col-4 row justify-content-center px-4 my-5" *ngFor="let rev of ReviewsList">
+        <div [ngClass]="{'review-dark' : (theme | async), 'review-light' : !(theme | async)}" class="col-lg-4 col-md-6 col-12 row justify-content-center px-4 my-5" *ngFor="let rev of ReviewsList">
             <div class="svg-wrapper my-2">
                 
                 <svg width="131" height="120" viewBox="0 0 131 120" fill="none" xmlns="http://www.w3.org/2000/svg">
