added some adaptive

--- a/src/app/components/courses/courses-item/courses-item.component.html
+++ b/src/app/components/courses/courses-item/courses-item.component.html
@@ -31,7 +31,7 @@
                 </p>
             </div>
             <div class="pt-4 card-description px-4" *ngIf="coursesItem.name == null">
-                <p class="text-center">З часом будуть з'являтися нові курси!<br>Хочеш запропонувати додати програму навчання з певного предмету?<br> Напиши нам на пошту: <br>sapiacademy.orders @gmail.com</p>
+                <p id="nothing-text" class="text-center">З часом будуть з'являтися нові курси!<br>Хочеш запропонувати додати програму навчання з певного предмету?<br> Напиши нам на пошту: <br>sapiacademy.orders @gmail.com</p>
             </div>
         </div>    
     </div>
