--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -13,8 +13,8 @@
         </div>
     </div>
     <div class="m-5">
-        <div class="row courses-wrapper py-1 py-md-5 py-lg-5 py-xl-5" [ngClass]="{'courses-wrapper-dark' : (theme | async), 'courses-wrapper-light' : !(theme | async)}">
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 my-3 px-1 px-lg-4 px-xl-4 px-md-4 crs" *ngFor="let item of courses" >
+        <div class="row courses-wrapper py-4 py-md-5 py-lg-5 py-xl-5" [ngClass]="{'courses-wrapper-dark' : (theme | async), 'courses-wrapper-light' : !(theme | async)}">
+            <div class="col-xl-3 col-lg-4 col-md-6  col-12 my-3 px-4 px-lg-4 px-xl-4 px-md-4 crs" *ngFor="let item of courses" >
                 <app-courses-item [coursesItem]="item"></app-courses-item>
             </div>
         </div>
