--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -1,15 +1,15 @@
 <section id="reviews" class="mt-5">
     <div class="row justify-content-between">
-        <div class="col-5">
+        <div class="col-xl-4 col-lg-3 col-2">
             <div class="underline"
             [ngClass]="{'underline-dark' : (theme | async), 'underline-light' : !(theme | async)}">
             
         </div>
     </div>
-        <div class="col-2 tagline" [ngClass]="{'dark-tagline' : (theme | async), 'light-tagline' : !(theme | async)}">
+        <div class="col-xl-4 col-lg-6 col-8 tagline" [ngClass]="{'dark-tagline' : (theme | async), 'light-tagline' : !(theme | async)}">
             <p>Відгуки</p>
         </div>
-        <div class="col-5">
+        <div class="col-xl-4 col-lg-3 col-2">
             <div class="underline"
                 [ngClass]="{'underline-dark' : (theme | async), 'underline-light' : !(theme | async)}">
     
