--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -54,3 +54,13 @@
     color: #1D3637;
     border-bottom: solid 1px hsla(238, 40%, 62%, 0.6);
 }
+
+@media screen and (min-width:0) and (max-width:400px) {
+    .tagline{
+        p{
+            font-size: 35px;
+            margin-bottom: 0;
+            margin-top: 20px;
+        }
+    }
+}
