native form was added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <div class="container">
         <app-lecturers></app-lecturers>
          <app-reviews></app-reviews>
-        <!-- <app-form-order></app-form-order>
-        <app-to-start></app-to-start> -->
+        <app-form-order></app-form-order>
+        <!--<app-to-start></app-to-start> -->
     </div>
 </div>
