Third try to fix this fucking bug

--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -30,7 +30,7 @@
                 саморозвитку.
             </div>
             <div class="turtle-wrapper">
-                <img src="../../../assets/Images/Turtle_introduction.png">
+                <img src="/SapiAcademy_0.1/src/assets/Images/Turtle_introduction.png">
             </div>
         </div>
     </div>
