--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
         <app-lecturers></app-lecturers>
          <app-reviews></app-reviews>
         <app-form-order></app-form-order>
-        <!--<app-to-start></app-to-start> -->
+        <app-to-start></app-to-start>
+        <app-footer></app-footer>
     </div>
 </div>
