--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,56 +1,53 @@
 <section id="footer" class="mt-5" [ngClass]="{'footer-dark' : (theme | async),'footer-light' : !(theme | async)}">
-    <div class="d-fex fler-column">
-        <div class="row justify-content-between mb-5 pb-1" [ngClass]="{'firstrow-dark' : (theme | async), 'firstrow-light' : !(theme | async)}">
-            <div class="col-6 row m-0">
-                <div class="col-3 Roboto-reg">
+    <div class="d-flex flex-column">
+        <div class="row justify-content-between mb-5 pb-1 pb-lg-0 pb-5" [ngClass]="{'firstrow-dark' : (theme | async), 'firstrow-light' : !(theme | async)}">
+            <div class="col-xl-6 col-12 text-md-start text-center row m-0">
+                <div class="col-xl-3 col-md-6 col-12 Roboto-reg text-xl-start text-center">
                     <p class="text-bold">Контакти</p>
                 </div>
-                <div class="col-9 d-flex flex-column Roboto-lig">
+                <div class="col-xl-9 col-md-6 col-12 d-flex flex-column Roboto-lig" id="infoblock">
                     <p>Телефон: +380956813660</p>
                     <p>Пошта: sapiacademy.orders@gmail.com</p>
                     <p>Telegram: @SapiAcademy</p>
                 </div>
             </div>
-            <div class="col-6 row justify-content-between m-0 p-0">
-                <div class="col-4  m-0 p-0">
+            <div class="col-xl-6 col-12 row justify-content-between m-0 p-0 mt-xl-0 mt-4">
+                <div class="col-xl-4 col-md-6 col-12  m-0 p-0 text-center">
                     <a href="#Logo">
-                        <img class="w-100 ps-4" src="../../../assets/Logos/Logo_Main.png">
+                        <img class="w-xl-100 w-50 ps-4" src="../../../assets/Logos/Logo_Main.png">
                     </a>
                 </div>
-                <div class="col-8">
+                <div class="col-xl-8 col-md-6 col-12 text-md-start text-center">
                     <div class="Roboto-reg">
                         <p>Дізнится більше:</p>
                     </div>
                     <div [ngClass]="{'nav-dark' : (theme | async), 'nav-light' : !(theme | async)}">
-                        <div class="row Roboto-lig mb-2">
-                            <a class="col-4">Про нас</a>
-                            <a class="col-4">Відгуки</a>
+                        <div class="row Roboto-lig mb-xl-2">
+                            <a class="col-xl-4 col-md-6 col-12">Про нас</a>
+                            <a class="col-xl-4 col-md-6 col-12">Відгуки</a>
                         </div>
-                        <div class="row Roboto-lig mt-2">
-                            <a class="col-4">Курси</a>
-                            <a class="col-4">Викладачі</a>
-                            <a class="col-4">Приєднатися</a>
+                        <div class="row Roboto-lig mt-xl-2">
+                            <a class="col-xl-4 col-md-6 col-12">Курси</a>
+                            <a class="col-xl-4 col-md-6 col-12">Викладачі</a>
+                            <a class="col-xl-4 col-md-6 col-12">Приєднатися</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="row col-6 justify-content-between Roboto-lig m-0">
-                <p class="col-5 pt-2">SapiAcademy {{CurrentYear}}</p>
-                <p class="col-7 pt-2">Всі права захищені</p>
-            </div>
-            <div class="row col-6 Roboto-reg m-0 p-0 justify-content-center">
-                <p class="col-4 text-center p-0 pt-2" style="font-weight: 100;">Стежте за нами</p>
-                <div class="row col-8 contact-links text-center mb-4" [ngClass]="{'contact-link-dark' : (theme | async),'contact-link-light' : !(theme | async)}">
-                    <div class="col-4">
+        <div class="row flex-xl-row-reverse flex-row">
+            
+            <div class="row col-xl-6 col-12 Roboto-reg m-0 p-0 justify-content-center mb-xl-0 mb-3">
+                <p class="col-xl-4 col-sm-6 col-12 text-center p-0 pt-2" style="font-weight: 100;">Стежте за нами</p>
+                <div class="row col-xl-8 col-sm-6 col-12 contact-links text-center mb-4" [ngClass]="{'contact-link-dark' : (theme | async),'contact-link-light' : !(theme | async)}">
+                    <div class="col-sm-4 col-12 mt-sm-0 mt-3">
                         <a>
                             <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path  d="M55 27.6685C55 12.3853 42.6869 -0.00341797 27.5 -0.00341797C12.3062 1.95317e-05 -0.00688171 12.3853 -0.00688171 27.6719C-0.00688171 41.4803 10.0512 52.9272 23.1962 55.0035V35.6675H16.2181V27.6719H23.2031V21.5703C23.2031 14.6369 27.3109 10.8075 33.5912 10.8075C36.6025 10.8075 39.7478 11.3472 39.7478 11.3472V18.1535H36.2794C32.8659 18.1535 31.8003 20.2881 31.8003 22.4778V27.6685H39.4247L38.2078 35.6641H31.7969V55C44.9419 52.9238 55 41.4769 55 27.6685Z"/>
                             </svg>                            
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-12 mt-sm-0 mt-3">
                         <a href="https://t.me/SapiAcademy">
                             <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path  d="M27.5 0C12.3131 0 0 12.3131 0 27.5C0 42.6869 12.3131 55 27.5 55C42.6869 55 55 42.6869 55 27.5C55 12.3131 42.6869 0 27.5 0ZM41.0071 18.8398L36.4925 40.1065C36.1602 41.6144 35.2619 41.981 34.0083 41.2706L27.1333 36.206L23.8196 39.4006C23.6572 39.6108 23.4489 39.781 23.2105 39.8982C22.9722 40.0154 22.7102 40.0764 22.4446 40.0767H22.4331L22.9213 33.0779L35.6629 21.5692C36.2129 21.081 35.5392 20.8038 34.8081 21.2919L19.0667 31.2056L12.2833 29.0881C10.8167 28.6229 10.7754 27.6215 12.5927 26.9019L39.0981 16.6856C40.331 16.2365 41.4035 16.979 41.0048 18.8421L41.0071 18.8398Z" />
@@ -58,7 +55,7 @@
                             
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-12 mt-sm-0 mt-3">
                         <a href="https://www.instagram.com/sapiacademy/">
                             <svg width="55" height="55" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M27.5 20.7832C26.1716 20.7832 24.873 21.1771 23.7684 21.9151C22.6639 22.6532 21.803 23.7022 21.2946 24.9295C20.7862 26.1568 20.6532 27.5073 20.9124 28.8102C21.1715 30.1131 21.8112 31.3099 22.7506 32.2492C23.6899 33.1886 24.8867 33.8283 26.1896 34.0874C27.4925 34.3466 28.843 34.2136 30.0703 33.7052C31.2977 33.1969 32.3467 32.336 33.0847 31.2314C33.8227 30.1269 34.2167 28.8283 34.2167 27.4998C34.2167 26.6178 34.0429 25.7444 33.7054 24.9295C33.3678 24.1146 32.8731 23.3741 32.2494 22.7504C31.6257 22.1267 30.8853 21.632 30.0703 21.2944C29.2554 20.9569 28.382 20.7832 27.5 20.7832ZM54.3937 14.1478C54.3795 12.0563 53.9944 9.98388 53.2562 8.02692C52.7126 6.59492 51.8715 5.29447 50.7884 4.21138C49.7054 3.1283 48.4049 2.2872 46.9729 1.74359C45.0159 1.00547 42.9436 0.620336 40.8521 0.606087C37.3583 0.416504 36.3292 0.416504 27.5 0.416504C18.6708 0.416504 17.6417 0.416504 14.1479 0.606087C12.0564 0.620336 9.98404 1.00547 8.02707 1.74359C6.59507 2.2872 5.29462 3.1283 4.21153 4.21138C3.12845 5.29447 2.28735 6.59492 1.74374 8.02692C1.00562 9.98388 0.620488 12.0563 0.60624 14.1478C0.416656 17.6415 0.416656 18.6707 0.416656 27.4998C0.416656 36.329 0.416656 37.3582 0.60624 40.8519C0.635392 42.9508 1.02 45.0295 1.74374 46.9998C2.28494 48.4253 3.12534 49.7182 4.20832 50.7915C5.28676 51.8811 6.59 52.7222 8.02707 53.2561C9.98404 53.9942 12.0564 54.3793 14.1479 54.3936C17.6417 54.5832 18.6708 54.5832 27.5 54.5832C36.3292 54.5832 37.3583 54.5832 40.8521 54.3936C42.9436 54.3793 45.0159 53.9942 46.9729 53.2561C48.41 52.7222 49.7132 51.8811 50.7917 50.7915C51.8746 49.7182 52.715 48.4253 53.2562 46.9998C53.9936 45.0333 54.3787 42.9521 54.3937 40.8519C54.5833 37.3582 54.5833 36.329 54.5833 27.4998C54.5833 18.6707 54.5833 17.6415 54.3937 14.1478ZM47.5146 35.8144C47.4277 37.4857 47.071 39.132 46.4583 40.6894C45.9325 41.9886 45.1509 43.1687 44.1599 44.1598C43.1689 45.1508 41.9887 45.9324 40.6896 46.4582C39.1174 47.0367 37.462 47.3568 35.7875 47.4061H19.2125C17.538 47.3568 15.8826 47.0367 14.3104 46.4582C12.9674 45.9591 11.7545 45.1628 10.7625 44.129C9.78117 43.1574 9.02332 41.9837 8.54166 40.6894C7.96087 39.1189 7.64955 37.4616 7.62082 35.7873V19.2123C7.64955 17.5381 7.96087 15.8808 8.54166 14.3103C9.04075 12.9672 9.83698 11.7543 10.8708 10.7623C11.8467 9.78632 13.0192 9.02926 14.3104 8.5415C15.8826 7.96302 17.538 7.64291 19.2125 7.59359H35.7875C37.462 7.64291 39.1174 7.96302 40.6896 8.5415C42.0326 9.0406 43.2455 9.83683 44.2375 10.8707C45.2188 11.8423 45.9767 13.016 46.4583 14.3103C47.0368 15.8824 47.3569 17.5379 47.4062 19.2123V27.4998C47.4062 33.079 47.5958 33.6478 47.5146 35.7873V35.8144ZM43.1812 15.6644C42.8588 14.7896 42.3504 13.9951 41.6911 13.3358C41.0318 12.6765 40.2373 12.1681 39.3625 11.8457C38.1613 11.4293 36.8961 11.2276 35.625 11.2498H19.375C18.0974 11.2623 16.8321 11.5007 15.6375 11.954C14.776 12.2618 13.99 12.7495 13.3316 13.3845C12.6732 14.0196 12.1574 14.7876 11.8187 15.6373C11.4254 16.8435 11.2333 18.1062 11.25 19.3748V35.6248C11.2768 36.901 11.5148 38.1639 11.9542 39.3623C12.2766 40.2372 12.785 41.0316 13.4443 41.6909C14.1036 42.3502 14.8981 42.8586 15.7729 43.1811C16.9285 43.6061 18.1445 43.8438 19.375 43.8853H35.625C36.9026 43.8728 38.1679 43.6344 39.3625 43.1811C40.2373 42.8586 41.0318 42.3502 41.6911 41.6909C42.3504 41.0316 42.8588 40.2372 43.1812 39.3623C43.6345 38.1678 43.8729 36.9025 43.8854 35.6248V19.3748C43.8862 18.096 43.6474 16.8283 43.1812 15.6373V15.6644ZM27.5 37.8457C26.1426 37.8457 24.7986 37.5779 23.5449 37.0576C22.2912 36.5374 21.1525 35.7749 20.1939 34.8138C19.2354 33.8528 18.4759 32.712 17.9589 31.457C17.442 30.2019 17.1777 28.8572 17.1812 27.4998C17.1812 25.4525 17.7887 23.4511 18.9267 21.7492C20.0647 20.0473 21.6821 18.7212 23.5742 17.939C25.4662 17.1567 27.5478 16.9534 29.5554 17.3548C31.5631 17.7562 33.4065 18.7443 34.8523 20.1939C36.2981 21.6435 37.2813 23.4894 37.6774 25.4981C38.0735 27.5068 37.8648 29.5878 37.0776 31.4778C36.2904 33.3678 34.9601 34.9817 33.2552 36.1153C31.5503 37.2488 29.5473 37.851 27.5 37.8457ZM38.3333 19.1853C37.7346 19.1219 37.1806 18.8392 36.7779 18.3916C36.3752 17.9441 36.1524 17.3633 36.1524 16.7613C36.1524 16.1593 36.3752 15.5785 36.7779 15.131C37.1806 14.6834 37.7346 14.4007 38.3333 14.3373C38.932 14.4007 39.4861 14.6834 39.8888 15.131C40.2914 15.5785 40.5142 16.1593 40.5142 16.7613C40.5142 17.3633 40.2914 17.9441 39.8888 18.3916C39.4861 18.8392 38.932 19.1219 38.3333 19.1853Z"/>
@@ -68,6 +65,11 @@
                     </div>
                 </div>
             </div>
+        <div class="row col-xl-6 col-12 justify-content-between Roboto-lig m-0  text-center" id="copyright">
+            <p class="col-xl-5 col-6 pt-2">SapiAcademy {{CurrentYear}}</p>
+            <p class="col-xl-7 col-6 pt-2">Всі права захищені</p>
         </div>
+        </div>
+        
     </div>
 </section>
