--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -106,3 +106,25 @@
         cursor: pointer;
     }
 }
+
+#copyright{
+    @media (max-width:575px) {
+        p{
+            font-size: 15px;
+        }
+    }
+    @media (max-width:350px) {
+        p{
+            width: 100%;
+            margin-bottom: 0;
+            padding-top: 1px !important;
+        }
+    }
+}
+#infoblock{
+    @media (max-width:350px) {
+        p{
+            font-size: 15px;
+        }
+    }
+}
