--- a/src/app/components/form-order/form-order.component.html
+++ b/src/app/components/form-order/form-order.component.html
@@ -81,8 +81,8 @@
                         </div>
                     </div>
 
-                    <div class="col-10 p-0 text-center" [ngClass]="{'submit-button-dark' : (theme | async), 'submit-button-light' : !(theme | async)}">
-                        <button class="py-2 px-5" type="submit">Зв`язатися</button>
+                    <div class="col-sm-10 col-7 p-0 text-center" [ngClass]="{'submit-button-dark' : (theme | async), 'submit-button-light' : !(theme | async)}">
+                        <button class="py-2 px-sm-5 px-1" type="submit">Зв`язатися</button>
                     </div>
                 </form>
             </div>
