--- a/src/app/components/form-order/form-order-2.component.scss
+++ b/src/app/components/form-order/form-order-2.component.scss
@@ -154,12 +154,17 @@
 @media screen and (max-width:575px) {
     .form-title{
         p{
-            font-size:40px;
+            font-size:30px;
         }
     }
     .invite-text{
         p{
             font-size:26px;
+        }
+    }
+    .submit-button-dark, .submit-button-light{
+        button{
+            font-size: 20px !important;
         }
     }
 }
