--- a/src/app/components/lecturers/lecturers-2.component.scss
+++ b/src/app/components/lecturers/lecturers-2.component.scss
@@ -132,7 +132,8 @@
     flex-direction: column;
     align-items: center;
     .med-w-100{
-      width: 100%;
+      width: 100%;      
+      margin-top: 10px;
     }
   }
   .lectur-image-wrapper{
