fixed some bugs

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <section>
     <nav class="navbar navbar-expand-md navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand d-md-none" href="#">
+        <div class="container-fluid" id="Logo">
+            <a class="navbar-brand d-md-none">
                 <img src="../../../assets/Logos/Logo_Main.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -21,8 +21,8 @@
                     </li>
                     
                     
-                    <a class="navbar-brand d-none d-md-block" href="#" id="Logo">
-                        <picture>
+                    <a class="navbar-brand d-none d-md-block" >
+                        <picture >
                             <source media="(min-width:767px)" srcset="../../../assets/Logos/Logo_Main.png">
                             <img src="../../../assets/Logos/SapiAcademy_croped.png" alt="">
                         </picture>
