--- a/src/app/components/to-start/to-start.component.scss
+++ b/src/app/components/to-start/to-start.component.scss
@@ -1,8 +1,8 @@
 .toup-dark{
     background: no-repeat url('../../../assets/Icons/left-arrow-dark.svg');
     transform: rotate(90deg);
-    height: 2em;
-    width: 2em;
+    height: 2rem;
+    width: 2rem;
     opacity: 0.7;
     &:hover{
         opacity: 1;
@@ -12,8 +12,8 @@
 .toup-light{
     background: no-repeat url('../../../assets/Icons/left-arrow.svg');
     transform: rotate(90deg);
-    height: 2em;
-    width: 2em;
+    height: 2rem;
+    width: 2rem;
     opacity: 0.7;
     &:hover{
         opacity: 1;
