--- a/src/app/components/form-order/form-order.component.html
+++ b/src/app/components/form-order/form-order.component.html
@@ -3,7 +3,13 @@
         <p>Залишилися запитання?</p>
     </div>
     <div class="d-flex justify-content-center mt-5 pt-5">
-        <div id="OrderForm" class="form-wrapper py-5 col-lg-7 col-md-10 col-12">
+
+        <div id="OrderForm" class="form-wrapper py-5 position-relative col-lg-7 col-md-10 col-12">
+            <div (click)="formsuccesschanger()" class="success-form" [ngClass]="{'dark-success' : (theme | async), 'light-success' : !(theme | async), 'formsuccess' : (formsuccess)}">
+                <p>
+                    Заявка прийнята! Ми зв'яжемось з вами впродовж дня
+                </p>
+            </div>
             <div class="invite-text" [ngClass]="{'dark-invite' : (theme | async), 'light-invite' : !(theme | async)}">
                 <p class="mb-sm-5 mb-1">
                     Приєднуйся до нас
