--- a/src/app/components/form-order/form-order.component.scss
+++ b/src/app/components/form-order/form-order.component.scss
@@ -112,6 +112,40 @@
     border-bottom: solid 1px #7678C4;
 }
 
+.formsuccess{
+  opacity: 1 !important;
+  z-index: 1 !important;
+}
 
-
-
+.success-form{
+  position: absolute;
+  border-radius: 20px;
+  top:0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  z-index: -1;
+  opacity: 0;
+  background-color: hsla(0, 0%, 0%, 0.7);
+  transition: all 0.5s ease-in-out;
+  p{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+  }
+  &.dark-success{
+    p{
+      color:#6BA312;
+      font-size: 30px;
+    }
+  }
+  &.light-success{
+    p{
+      color: white;
+      font-size: 30px;
+    }
+  }
+}
