--- a/src/app/components/lecturers/lecturers.component.html
+++ b/src/app/components/lecturers/lecturers.component.html
@@ -4,9 +4,10 @@
             Викладачі
         </p>
     </div>
-    <div>
-        <ngb-carousel *ngIf="lecturers" [interval]="10000000" class="py-5" >
-            <ng-template *ngFor="let lect of lecturers" ngbSlide >
+    <div (touchstart)="posIni = $event.changedTouches[0].pageX"
+    (touchend)="move($event.changedTouches[0].pageX)">
+        <ngb-carousel #carousel  *ngIf="lecturers" [interval]="10000000" class="py-5" >
+            <ng-template  *ngFor="let lect of lecturers" ngbSlide >
                 <div class="d-flex justify-content-center slide-box" >
                     <div class="row w-75 lect-wrapper">
                         <div class="col-4 px-0 med-w-100">
