--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div class="container-xl">
         <app-header></app-header>
         <app-introduction></app-introduction>
+        <app-price-info></app-price-info>
         <app-about-us></app-about-us>
     </div>
      <div [ngClass]="{'dark-courses' : (theme | async), 'light-courses' : !(theme | async)}">
