--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,10 @@
     font-family: 'Roboto-Medium';
     src: url('../src/assets/fonts/Roboto-Medium.ttf');
 }
+@font-face {
+    font-family: 'KyivTypeSerif-Medium';
+    src: url('../src/assets/fonts/KyivTypeSerif-Medium.ttf');
+}
 
 
     .w-xl-100{
